# SafeStack_2_0

./: CMakeLists.txt  README.md
src/: main.cpp  tmp.h
src/global/: config.h  global.cpp  global.h  logging.cpp  logging.h  win.cpp  win.h
src/tools/: long_array.cpp  long_array.h  memory.h  stack.h
